--- a/app/src/main/res/layout/fragment_mime.xml
+++ b/app/src/main/res/layout/fragment_mime.xml
@@ -83,6 +83,12 @@
                 android:layout_height="wrap_content" />
 
         </RelativeLayout>
+        <LinearLayout
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </LinearLayout>
     </LinearLayout>
     <Space
         android:layout_width="match_parent"
