--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -73,6 +73,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
+                android:id="@+id/register"
+                android:onClick="register"
                 android:padding="@dimen/login_text"
                 android:text="@string/login_register"
                 android:layout_width="wrap_content"
