--- a/app/src/main/res/layout/head_toolbar.xml
+++ b/app/src/main/res/layout/head_toolbar.xml
@@ -15,6 +15,12 @@
         android:paddingRight="15dp"
         android:layout_gravity="right" />
     <ImageView
+        android:paddingLeft="10dp"
+        android:id="@+id/toolbar_center"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_horizontal" />
+    <ImageView
         android:id="@+id/toolbar_image"
         style="@style/Base.Widget.AppCompat.Toolbar.Button.Navigation"
         android:layout_width="wrap_content"
@@ -27,7 +33,6 @@
         android:layout_height="wrap_content"
         android:lines="1"
         android:ellipsize="end"
-        android:text="title"
         android:scrollHorizontally="true"
         android:textColor="@color/white"
         android:layout_gravity="center" />
