--- a/app/src/main/res/layout/item_cosmetology_adapter.xml
+++ b/app/src/main/res/layout/item_cosmetology_adapter.xml
@@ -36,7 +36,7 @@
         <TextView
             android:layout_centerVertical="true"
             android:padding="5dp"
-            android:text="护肤保养"
+            android:text="@string/item_hufu"
             android:background="@drawable/cosmetology_text"
             android:textColor="@color/blue"
             android:layout_width="wrap_content"
