--- a/app/src/main/res/layout/head_toolbar.xml
+++ b/app/src/main/res/layout/head_toolbar.xml
@@ -34,7 +34,7 @@
         android:lines="1"
         android:ellipsize="end"
         android:scrollHorizontally="true"
-        android:textColor="@color/white"
+        android:textColor="@color/orange"
         android:layout_gravity="center" />
 
 </android.support.v7.widget.Toolbar>
