--- a/app/src/main/res/layout/mine_item.xml
+++ b/app/src/main/res/layout/mine_item.xml
@@ -46,6 +46,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
+                android:id="@+id/member_name"
                 android:text="Viilen slam Hu"
                 android:textColor="@color/black"
                 android:gravity="right"
@@ -66,6 +67,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
+                android:id="@+id/member_sex"
                 android:text="男"
                 android:textColor="@color/black"
                 android:gravity="right"
@@ -86,6 +88,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
+                android:id="@+id/member_phone"
                 android:text="13888888888"
                 android:textColor="@color/black"
                 android:gravity="right"
@@ -105,7 +108,9 @@
                 android:padding="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
+
             <TextView
+
                 android:text="宁波 鄞州"
                 android:textColor="@color/black"
                 android:gravity="right"
@@ -114,7 +119,8 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:drawableRight="@mipmap/uc_black"
-                android:drawablePadding="10dp"/>
+                android:drawablePadding="10dp"
+                android:id="@+id/member_address" />
         </LinearLayout>
         <LinearLayout
             android:background="@color/white"
@@ -126,6 +132,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
+                android:id="@+id/member_birthday"
                 android:text="08 15"
                 android:textColor="@color/black"
                 android:gravity="right"
@@ -149,6 +156,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
+                android:id="@+id/member_jifen"
                 android:text="2000"
                 android:textColor="@color/black"
                 android:gravity="right"
@@ -170,6 +178,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
+                android:id="@+id/member_level"
                 android:text="二级会员"
                 android:textColor="@color/black"
                 android:gravity="right"
@@ -190,6 +199,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
+                android:id="@+id/member_type"
                 android:text="客户"
                 android:textColor="@color/black"
                 android:gravity="right"
