--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@mipmap/title"/>
+
     <LinearLayout
         android:layout_margin="35dp"
         android:orientation="vertical"
@@ -80,6 +81,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
+                android:id="@+id/forget_passwd"
+                android:onClick="forgetPasswd"
                 android:layout_alignParentRight="true"
                 android:padding="@dimen/login_text"
                 android:text="@string/login_forget"
@@ -103,7 +106,6 @@
 
 
     </LinearLayout>
-
 
 
 </LinearLayout>
