--- a/app/src/main/res/layout/fragment_mime.xml
+++ b/app/src/main/res/layout/fragment_mime.xml
@@ -12,6 +12,8 @@
         <include layout="@layout/head_toolbar"/>
 
         <RelativeLayout
+            android:id="@+id/rl_login"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <ImageView
@@ -84,10 +86,25 @@
 
         </RelativeLayout>
         <LinearLayout
-            android:visibility="gone"
+            android:id="@+id/ll_login"
+            android:visibility="visible"
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
+            android:layout_height="match_parent"
+            android:gravity="center">
+            <ImageView
+                android:id="@+id/user_head"
+                android:src="@mipmap/user_head"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:padding="5dp"
+                android:textColor="@color/white"
+                android:text="@string/check_login"
+                android:layout_below="@id/user_head"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView6" />
         </LinearLayout>
     </LinearLayout>
     <Space
