--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,13 +7,10 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-    <style name="foodRatingBar" parent="@android:style/Widget.RatingBar">
-        <!--指向star_rating_bar_full.xml文件 -->
-        <item name="android:progressDrawable">@drawable/star_rating_bar_full</item>
-        <item name="android:minHeight">30dip</item>
-        <item name="android:maxHeight">30dip</item>
-        <!-- 是否不支持用户交互，只应作为指标。 -->
-        <item name="android:isIndicator">true</item>
+    <style name="MyRatingBar" parent="@android:style/Widget.RatingBar">
+        <item name="android:progressDrawable">@drawable/ratingbar_bg</item>
+        <item name="android:minHeight">48dp</item>
+        <item name="android:maxHeight">48dp</item>
     </style>
 
     <style name="Theme.ToolBar.right" parent="Theme.AppCompat.Light.NoActionBar">
@@ -22,6 +19,10 @@
 
     <style name="ActionButton.Overflow.right" parent="android:style/Widget.Holo.Light.ActionButton.Overflow">
         <item name="android:src">@mipmap/ic_launcher</item>
+    </style>
+    <style name="AnimBottom" parent="@android:style/Animation">
+        <item name="android:windowEnterAnimation">@anim/push_bottom_in</item>
+        <item name="android:windowExitAnimation">@anim/push_bottom_out</item>
     </style>
 
 
