--- a/app/src/main/res/drawable/divider.xml
+++ b/app/src/main/res/drawable/divider.xml
@@ -3,5 +3,5 @@
     android:shape="rectangle">
     <size android:width="1dp"
         android:height="1dp"/>
-    <solid android:color="#e1e1e1"/>
+    <solid android:color="@color/gry"/>
 </shape>
