--- a/app/src/main/res/layout/fragment_apply.xml
+++ b/app/src/main/res/layout/fragment_apply.xml
@@ -1,14 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.cjj.MaterialRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/srf_layout"
+    android:background="@color/gry"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <android.support.v7.widget.RecyclerView
-        android:background="@color/white"
-        android:id="@+id/apply_recyclerView"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
+            <android.support.v7.widget.RecyclerView
+                android:background="@color/white"
+                android:id="@+id/apply_recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-    </android.support.v7.widget.RecyclerView>
+            </android.support.v7.widget.RecyclerView>
+        </LinearLayout>
 
-</LinearLayout>
+    </ScrollView>
+
+
+</com.cjj.MaterialRefreshLayout>
