--- a/app/src/main/res/layout/item_apply.xml
+++ b/app/src/main/res/layout/item_apply.xml
@@ -3,9 +3,12 @@
     android:orientation="vertical"
     android:divider="@drawable/divider"
     android:showDividers="middle"
+    android:background="@color/gry"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <RelativeLayout
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
         android:background="@color/white"
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -13,15 +16,18 @@
         <TextView
             android:id="@+id/apply_of_name"
             android:gravity="center_vertical"
-            android:padding="5dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
             android:text="优惠申请人"
             android:textSize="18sp"
             android:textColor="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
+            android:id="@+id/apply_name"
             android:layout_toRightOf="@id/apply_of_name"
-            android:padding="5dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
             android:text="咨询师一号"
             android:textSize="18sp"
             android:textColor="@color/gry"
@@ -31,7 +37,8 @@
             android:layout_alignParentEnd="true"
             android:id="@+id/apply_creattime"
             android:layout_gravity="right|center_vertical"
-            android:padding="5dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
             android:text="2016-12-23 13:54:54"
             android:textSize="16sp"
             android:textColor="@color/gry"
@@ -40,6 +47,8 @@
             android:layout_alignParentRight="true" />
     </RelativeLayout>
     <LinearLayout
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
         android:background="@color/white"
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -50,17 +59,17 @@
             android:layout_height="wrap_content">
             <TextView
                 android:gravity="center_vertical"
-                android:padding="5dp"
                 android:text="申请优惠订单详情:"
                 android:textSize="18sp"
                 android:textColor="@color/gry"
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                android:layout_height="wrap_content" />
+                android:layout_height="match_parent" />
             <TextView
                 android:id="@+id/apply_preferStatus"
                 android:layout_gravity="right"
-                android:padding="5dp"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
                 android:text="未处理"
                 android:textSize="18sp"
                 android:textColor="@color/orange"
@@ -68,15 +77,24 @@
                 android:layout_height="wrap_content" />
 
         </LinearLayout>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/apply_order_recycle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </android.support.v7.widget.RecyclerView>
     </LinearLayout>
+
     <LinearLayout
+        android:paddingLeft="15dp"
         android:background="@color/white"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
             android:layout_gravity="center_vertical"
-            android:padding="5dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
             android:text="申请状态:"
             android:textSize="18sp"
             android:textColor="@color/black"
@@ -85,20 +103,21 @@
         <TextView
             android:id="@+id/apply_preferStatus_bottom"
             android:layout_gravity="center_vertical"
-            android:padding="5dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
             android:text="申请中"
             android:textSize="18sp"
             android:textColor="@color/orange"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content" />
+
         <Button
             android:id="@+id/apply_button"
             android:textColor="@color/white"
             android:textSize="18sp"
             android:text="去审批"
             android:layout_gravity="right"
-            android:background="@color/orange"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
