--- a/app/src/main/res/layout/item_counselor_order.xml
+++ b/app/src/main/res/layout/item_counselor_order.xml
@@ -8,112 +8,10 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:padding="10dp"
-        android:background="@color/white"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:textColor="@color/orange"
-            android:textSize="20sp"
-            android:text="@string/item_counselor"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:text="创建时间:2016-11-14 11:00"
-            android:gravity="right"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-
-    <LinearLayout
         android:layout_margin="10dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:paddingTop="10dp"
-                    android:textColor="@color/black"
-                    android:textSize="16sp"
-                    android:id="@+id/proscenium_name_left"
-                    android:text="咨询师:"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <TextView
-                    android:padding="10dp"
-                    android:textSize="16sp"
-                    android:textColor="@color/black"
-                    android:id="@+id/proscenium_name"
-                    android:text="李某某"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:paddingTop="10dp"
-                    android:textColor="@color/black"
-                    android:textSize="16sp"
-                    android:text="咨询师工号:"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <TextView
-                    android:padding="10dp"
-                    android:text="54545454"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-        </LinearLayout>
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:id="@+id/proscenium_sex_left"
-                    android:textSize="16sp"
-                    android:textColor="@color/black"
-                    android:text="性        别:"
-                    android:paddingTop="10dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <TextView
-                    android:padding="10dp"
-                    android:id="@+id/proscenium_sex"
-                    android:text="女"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-        </LinearLayout>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_margin="10dp"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:text="订单详情"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView3" />
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
@@ -131,165 +29,90 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
                 <TextView
+                    android:id="@+id/counselor_orderNum"
                     android:padding="10dp"
                     android:text="HF JS005432"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
             </LinearLayout>
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:paddingTop="10dp"
-                    android:textColor="@color/black"
-                    android:textSize="16sp"
-                    android:text="订单类型:"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <TextView
-                    android:padding="10dp"
-                    android:text="物理治疗"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
         </LinearLayout>
+
         <TextView
-            android:paddingTop="10dp"
             android:textSize="16sp"
             android:textColor="@color/black"
             android:text="订单详情:"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView2" />
+
+        <RelativeLayout
+            android:id="@+id/rl_taocan"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/counselor_project"
+                android:text="套餐1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/counselor_project_price"
+                android:layout_alignParentRight="true"
+                android:text="¥2100.00"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </RelativeLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:background="@color/white"
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </android.support.v7.widget.RecyclerView>
+
+        <TextView
+            android:id="@+id/counselor_comment"
+            android:paddingTop="5dp"
+            android:text="套餐内容"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:paddingTop="10dp"
-                    android:textColor="@color/black"
-                    android:textSize="16sp"
-                    android:text="优惠政策:"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/textView4" />
-
-                <TextView
-                    android:padding="10dp"
-                    android:text="满500减200"
-                    android:layout_weight="1"
-                    android:gravity="right"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:paddingTop="10dp"
-                    android:textColor="@color/black"
-                    android:textSize="16sp"
-                    android:text="优惠状态:"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <TextView
-                    android:textColor="@color/blue"
-                    android:gravity="right"
-                    android:layout_weight="1"
-                    android:padding="10dp"
-                    android:text="审核中"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-        </LinearLayout>
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:paddingTop="10dp"
-                    android:textColor="@color/black"
-                    android:textSize="16sp"
-                    android:text="付款总额:"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    android:padding="10dp"
-                    android:text="¥1300.00"
-                    android:layout_weight="1"
-                    android:gravity="right"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:paddingTop="10dp"
-                    android:textColor="@color/black"
-                    android:textSize="16sp"
-                    android:text="订单状态:"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <TextView
-                    android:textColor="@color/blue"
-                    android:gravity="right"
-                    android:layout_weight="1"
-                    android:padding="10dp"
-                    android:text="完成订单"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-        </LinearLayout>
-
     </LinearLayout>
+
     <LinearLayout
-        android:padding="10dp"
+        android:layout_margin="10dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
-            android:text="用户评价"
+            android:textSize="16sp"
             android:textColor="@color/black"
-            android:textSize="20sp"
+            android:text="独立项目"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-        <LinearLayout
-            android:orientation="horizontal"
+        <android.support.v7.widget.RecyclerView
+            android:background="@color/white"
+            android:id="@+id/duli_recyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <TextView
-                android:paddingTop="10dp"
-                android:text="暂无评价:"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:text="去评价"
-                android:gravity="right"
-                android:textColor="@color/blue"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
+
+        </android.support.v7.widget.RecyclerView>
     </LinearLayout>
+    <android.support.v7.widget.RecyclerView
+        android:background="@color/white"
+        android:id="@+id/favorable_recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </android.support.v7.widget.RecyclerView>
+
+    <android.support.v7.widget.RecyclerView
+        android:background="@color/white"
+        android:id="@+id/evaluate_recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
