--- a/app/src/main/res/layout/item_counselor_recycler.xml
+++ b/app/src/main/res/layout/item_counselor_recycler.xml
@@ -1,80 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:divider="@drawable/divider"
-    android:showDividers="middle"
-    android:background="@color/white"
-    android:layout_width="match_parent"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <RelativeLayout
-        android:layout_margin="10dp"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/feedback_type"
-            android:text="咨询辉昂"
-            android:textSize="18sp"
-            android:textColor="@color/black"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/feedback_time"
-            android:layout_alignParentRight="true"
-            android:text="创建时间:2017-01-10 14:48:25"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </RelativeLayout>
     <LinearLayout
         android:layout_margin="10dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <LinearLayout
-            android:orientation="horizontal"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="0dp"
-                android:layout_weight="1"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <TextView
                     android:paddingTop="10dp"
                     android:textColor="@color/black"
                     android:textSize="16sp"
-                    android:text="回访人员:"
+                    android:id="@+id/proscenium_name_left"
+                    android:text="咨询师:"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
                 <TextView
-                    android:id="@+id/feedback_name"
+                    android:padding="10dp"
                     android:textSize="16sp"
                     android:textColor="@color/black"
-                    android:padding="10dp"
-                    android:text="张三三"
+                    android:id="@+id/counselor_name"
+                    android:text="李某某"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
             </LinearLayout>
             <LinearLayout
+                android:layout_alignParentRight="true"
                 android:orientation="horizontal"
-                android:layout_width="0dp"
-                android:layout_weight="1"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <TextView
                     android:paddingTop="10dp"
                     android:textColor="@color/black"
                     android:textSize="16sp"
-                    android:text="回访工号:"
+                    android:text="咨询师工号:"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
                 <TextView
-                    android:id="@+id/feedback_num"
+                    android:id="@+id/counselor_num"
                     android:padding="10dp"
                     android:text="54545454"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
             </LinearLayout>
-        </LinearLayout>
+        </RelativeLayout>
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
@@ -94,35 +70,18 @@
                     android:layout_height="wrap_content" />
                 <TextView
                     android:padding="10dp"
-                    android:id="@+id/feedback_sex"
+                    android:id="@+id/counselor_sex"
                     android:text="女"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
             </LinearLayout>
-
+            <TextView
+                android:id="@+id/counselor_time"
+                android:padding="10dp"
+                android:text="ssssssssssssssssssssssssssssss"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
         </LinearLayout>
     </LinearLayout>
-    <LinearLayout
-        android:layout_margin="10dp"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:drawableLeft="@mipmap/mine_infomation"
-            android:text="回访内容"
-            android:textColor="@color/black"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/feedback_content"
-            android:text="内容"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-    </LinearLayout>
-    <include layout="@layout/item_evaluate"
-        android:id="@+id/evaluate_first"/>
-    <include layout="@layout/item_evaluate_done"
-        android:id="@+id/evaluate_second"/>
 
 </LinearLayout>
