--- a/app/src/main/res/layout/item_favorable.xml
+++ b/app/src/main/res/layout/item_favorable.xml
@@ -5,170 +5,258 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <include layout="@layout/head_toolbar"/>
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="15dp" />
-    <LinearLayout
-        android:background="@color/white"
-        android:orientation="horizontal"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <TextView
-            android:gravity="center_vertical"
-            android:padding="5dp"
-            android:text="优惠申请人"
-            android:textSize="18sp"
-            android:textColor="@color/black"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:padding="5dp"
-            android:text="咨询师一号"
-            android:textSize="18sp"
-            android:textColor="@color/gry"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:layout_gravity="right|center_vertical"
+        <LinearLayout
+            android:divider="@drawable/divider"
+            android:showDividers="middle"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="15dp" />
+            <RelativeLayout
+                android:background="@color/white"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/apply_of_name"
+                    android:gravity="center_vertical"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:paddingLeft="15dp"
+                    android:text="优惠申请人"
+                    android:textSize="18sp"
+                    android:textColor="@color/black"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:id="@+id/apply_name"
+                    android:layout_toRightOf="@id/apply_of_name"
+                    android:padding="5dp"
+                    android:text="咨询师一号"
+                    android:textSize="18sp"
+                    android:textColor="@color/gry"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:layout_alignParentEnd="true"
+                    android:id="@+id/apply_creattime"
+                    android:layout_gravity="right|center_vertical"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:paddingRight="15dp"
+                    android:text="2016-12-23 13:54:54"
+                    android:textSize="16sp"
+                    android:textColor="@color/gry"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true" />
+            </RelativeLayout>
 
-            android:padding="5dp"
-            android:text="2016-12-23 13:54:54"
-            android:textSize="16sp"
-            android:textColor="@color/gry"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+            <LinearLayout
+                android:background="@color/white"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <LinearLayout
+                    android:paddingRight="15dp"
+                    android:paddingLeft="15dp"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:gravity="center_vertical"
+                        android:text="申请优惠订单详情:"
+                        android:textSize="18sp"
+                        android:textColor="@color/gry"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="wrap_content" />
+                    <TextView
+                        android:id="@+id/apply_preferStatus"
+                        android:layout_gravity="right"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:text="未处理"
+                        android:textSize="18sp"
+                        android:textColor="@color/orange"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
 
-    <LinearLayout
-        android:background="@color/white"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:gravity="center_vertical"
-                android:padding="5dp"
-                android:text="优惠参考价格"
-                android:textSize="18sp"
-                android:textColor="@color/black"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:layout_alignParentRight="true"
-                android:padding="5dp"
-                android:text="5000.00"
-                android:textSize="18sp"
-                android:textColor="@color/orange"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </RelativeLayout>
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:gravity="center_vertical"
-                android:padding="5dp"
-                android:text="价格实际优惠"
-                android:textSize="18sp"
-                android:textColor="@color/black"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:layout_alignParentRight="true"
-                android:padding="5dp"
-                android:text="2000.00"
-                android:textSize="18sp"
-                android:textColor="@color/orange"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </RelativeLayout>
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:gravity="center_vertical"
-                android:padding="5dp"
-                android:text="优惠等级"
-                android:textSize="18sp"
-                android:textColor="@color/black"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:layout_alignParentRight="true"
-                android:padding="5dp"
-                android:text="二级"
-                android:textSize="18sp"
-                android:textColor="@color/orange"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </RelativeLayout>
-    </LinearLayout>
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="15dp" />
-    <LinearLayout
-        android:id="@+id/ll_apply_pass"
-        android:background="@color/white"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <RelativeLayout
+                </LinearLayout>
+                <android.support.v7.widget.RecyclerView
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp"
+                    android:id="@+id/apply_order_recycle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:gravity="center_vertical"
-                android:padding="5dp"
-                android:text="审核状态"
-                android:textSize="18sp"
-                android:textColor="@color/black"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:layout_alignParentRight="true"
-                android:padding="5dp"
-                android:text="通过审核"
-                android:textSize="18sp"
-                android:textColor="@color/orange"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </RelativeLayout>
-        <TextView
-            android:padding="5dp"
-            android:text="这个优惠通过"
-            android:textSize="18sp"
-            android:textColor="@color/gry"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-    <LinearLayout
-        android:id="@+id/ll_apply_text"
-        android:background="@color/white"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:drawableLeft="@mipmap/item_shenhe"
-            android:drawablePadding="5dp"
-            android:padding="5dp"
-            android:text="审核内容"
-            android:textSize="18sp"
-            android:textColor="@color/orange"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <EditText
-            android:id="@+id/et_apply_text"
-            android:gravity="start"
-            android:textCursorDrawable="@null"
-            android:background="@null"
-            android:textColor="@color/black"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"/>
-    </LinearLayout>
+                </android.support.v7.widget.RecyclerView>
+            </LinearLayout>
+
+            <LinearLayout
+                android:background="@color/white"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <RelativeLayout
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:gravity="center_vertical"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:text="优惠参考价格"
+                        android:textSize="18sp"
+                        android:textColor="@color/black"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                    <TextView
+                        android:id="@+id/apply_referPrice"
+                        android:layout_alignParentRight="true"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:text="5000.00"
+                        android:textSize="18sp"
+                        android:textColor="@color/orange"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                </RelativeLayout>
+                <RelativeLayout
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:gravity="center_vertical"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:text="价格实际优惠"
+                        android:textSize="18sp"
+                        android:textColor="@color/black"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                    <TextView
+                        android:id="@+id/apply_preferPrice"
+                        android:layout_alignParentRight="true"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:text="2000.00"
+                        android:textSize="18sp"
+                        android:textColor="@color/orange"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                </RelativeLayout>
+                <RelativeLayout
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:gravity="center_vertical"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:text="优惠等级"
+                        android:textSize="18sp"
+                        android:textColor="@color/black"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                    <TextView
+                        android:id="@+id/apply_level"
+                        android:layout_alignParentRight="true"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:text="二级"
+                        android:textSize="18sp"
+                        android:textColor="@color/orange"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                </RelativeLayout>
+            </LinearLayout>
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="15dp" />
+            <LinearLayout
+                android:id="@+id/ll_apply_pass"
+                android:background="@color/white"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <RelativeLayout
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:gravity="center_vertical"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:text="审核状态"
+                        android:textSize="18sp"
+                        android:textColor="@color/black"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                    <TextView
+                        android:id="@+id/apply_static"
+                        android:layout_alignParentRight="true"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:text="通过审核"
+                        android:textSize="18sp"
+                        android:textColor="@color/orange"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+                </RelativeLayout>
+                <TextView
+                    android:paddingLeft="15dp"
+                    android:paddingRight="15dp"
+                    android:id="@+id/apply_reviewNote"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:text="这个优惠通过"
+                    android:textSize="18sp"
+                    android:textColor="@color/gry"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+            <LinearLayout
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
+                android:id="@+id/ll_apply_text"
+                android:background="@color/white"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:drawableLeft="@mipmap/item_shenhe"
+                    android:drawablePadding="5dp"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:text="审核内容"
+                    android:textSize="18sp"
+                    android:textColor="@color/orange"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+                <EditText
+                    android:id="@+id/et_apply_text"
+                    android:gravity="start"
+                    android:textCursorDrawable="@null"
+                    android:background="@null"
+                    android:textColor="@color/black"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"/>
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
     <RelativeLayout
+        android:id="@+id/rl_apply_button"
+        android:gravity="bottom"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
@@ -202,6 +290,5 @@
         </LinearLayout>
 
     </RelativeLayout>
-
 
 </LinearLayout>
