--- a/app/src/main/res/layout/item_medical_order.xml
+++ b/app/src/main/res/layout/item_medical_order.xml
@@ -20,109 +20,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
+            android:id="@+id/medical_time"
             android:text="创建时间:2016-11-14 11:00"
             android:gravity="right"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content" />
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_margin="10dp"
-        android:orientation="vertical"
+    <android.support.v7.widget.RecyclerView
+        android:background="@color/white"
+        android:id="@+id/medical_doctor_recycle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:paddingTop="10dp"
-                    android:textColor="@color/black"
-                    android:textSize="16sp"
-                    android:id="@+id/proscenium_name_left"
-                    android:text="主治医生:"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <TextView
-                    android:padding="10dp"
-                    android:textSize="16sp"
-                    android:textColor="@color/black"
-                    android:id="@+id/proscenium_name"
-                    android:text="李某某"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:paddingTop="10dp"
-                    android:textColor="@color/black"
-                    android:textSize="16sp"
-                    android:text="医生工号:"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <TextView
-                    android:padding="10dp"
-                    android:text="54545454"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-        </LinearLayout>
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:id="@+id/proscenium_sex_left"
-                    android:textSize="16sp"
-                    android:textColor="@color/black"
-                    android:text="性        别:"
-                    android:paddingTop="10dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <TextView
-                    android:padding="10dp"
-                    android:id="@+id/proscenium_sex"
-                    android:text="女"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content">
 
-                <TextView
-                    android:paddingTop="10dp"
-                    android:textColor="@color/black"
-                    android:textSize="16sp"
-                    android:text="治疗状态:"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <TextView
-                    android:padding="10dp"
-                    android:text="完成治疗"
-                    android:textColor="@color/blue"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-        </LinearLayout>
-    </LinearLayout>
+    </android.support.v7.widget.RecyclerView>
+
     <LinearLayout
         android:layout_margin="10dp"
         android:orientation="vertical"
@@ -130,40 +42,50 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:drawableLeft="@mipmap/mine_infomation"
             android:text="治疗详情"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/textView3" />
-
-    </LinearLayout>
-    <LinearLayout
-        android:padding="10dp"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
         <TextView
-            android:text="用户评价"
-            android:textColor="@color/black"
-            android:textSize="20sp"
+            android:id="@+id/medical_project_name"
+            android:text="套餐1"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/medical_recycler"
+            android:background="@color/white"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
         <LinearLayout
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
-                android:paddingTop="10dp"
-                android:text="暂无评价:"
-                android:layout_width="wrap_content"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                android:text="独立项目"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:text="去评价"
-                android:gravity="right"
-                android:textColor="@color/blue"
-                android:layout_height="wrap_content" />
+            <android.support.v7.widget.RecyclerView
+                android:background="@color/white"
+                android:id="@+id/duli_medical_recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            </android.support.v7.widget.RecyclerView>
         </LinearLayout>
     </LinearLayout>
+    <android.support.v7.widget.RecyclerView
+        android:background="@color/white"
+        android:id="@+id/evaluate_medical_recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
