--- a/app/src/main/res/layout/item_prosceniun.xml
+++ b/app/src/main/res/layout/item_prosceniun.xml
@@ -7,33 +7,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:padding="10dp"
-        android:background="@color/white"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:textColor="@color/orange"
-            android:textSize="20sp"
-            android:text="@string/item_proscenium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/proscenium_createTime"
-            android:text="创建时间:2016-11-14 11:00"
-            android:gravity="right"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-
-    <LinearLayout
+    <RelativeLayout
         android:layout_margin="10dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <LinearLayout
+            android:id="@+id/ll_head"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -78,6 +58,7 @@
             </LinearLayout>
         </LinearLayout>
         <LinearLayout
+            android:layout_below="@id/ll_head"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -122,7 +103,7 @@
             </LinearLayout>
 
         </LinearLayout>
-    </LinearLayout>
+    </RelativeLayout>
     <LinearLayout
         android:layout_margin="10dp"
         android:orientation="vertical"
@@ -132,24 +113,6 @@
             android:text="服务内容"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:paddingTop="10dp"
-                android:text="客户资料填写:"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:id="@+id/proscenium_comment"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:text="完成"
-                android:gravity="right"
-                android:textColor="@color/blue"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
@@ -170,34 +133,9 @@
         </LinearLayout>
 
     </LinearLayout>
-    <LinearLayout
-        android:padding="10dp"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:text="用户评价"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:paddingTop="10dp"
-                android:text="暂无评价:"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:text="去评价"
-                android:gravity="right"
-                android:textColor="@color/blue"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
-    </LinearLayout>
+    <include layout="@layout/item_evaluate"
+        android:id="@+id/evaluate_first"/>
+    <include layout="@layout/item_evaluate_done"
+        android:id="@+id/evaluate_second"/>
 
 </LinearLayout>
