--- a/app/src/main/res/layout/mine_apply.xml
+++ b/app/src/main/res/layout/mine_apply.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
     <include layout="@layout/head_toolbar"/>
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="10dp" />
+   <View
+       android:layout_width="match_parent"
+       android:layout_height="1dp"
+       android:background="@color/gry"
+       />
     <android.support.design.widget.TabLayout
         android:id="@+id/id_tl"
         android:layout_width="match_parent"
